other-ivpol/verify-image-with-multi-keys/.chainsaw-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: test-signing
spec:
  containers:
    - name: test-container
      image: 'ghcr.io/kyverno/test-verify-image:unsigned'
      imagePullPolicy: Always
