other-ivpol/verify-image-with-multi-keys/.chainsaw-test/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  namespace: default
data:
  production: |
    -----BEGIN PUBLIC KEY-----
    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
    -----END PUBLIC KEY-----

  test-signing: |
    -----BEGIN PUBLIC KEY-----
    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
    -----END PUBLIC KEY-----
