other-ivpol/verify-image-with-multi-keys/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ImageValidatingPolicy
metadata:
  name: verify-image-with-multi-keys
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
