other-ivpol/verify-image-with-multi-keys/verify-image-with-multi-keys.yaml
apiVersion: policies.kyverno.io/v1
kind: ImageValidatingPolicy
metadata:
  name: verify-image-with-multi-keys
  annotations:
    policies.kyverno.io/title: Verify Image with Multiple Keys
    policies.kyverno.io/category: Software Supply Chain Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/description: >-
      There may be multiple keys used to sign images based on
      the parties involved in the creation process. This image
      verification policy requires the named image be signed by
      two separate keys.
spec:
  validationActions: [Deny]
  webhookConfiguration:
    timeoutSeconds: 30
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  variables:
  - name: keys
    expression: 'resource.Get("v1", "configmaps", "default", "keys")'
  matchImageReferences:
  - glob: "ghcr.io/kyverno/test-verify-image:*"
  attestors:
  - name: productionKey
    cosign:
      key:
        expression: "variables.keys.data.production"
      ctlog:
        insecureIgnoreTlog: true
  - name: namespaceKey
    cosign:
      key:
        expression: "variables.keys.data[object.metadata.namespace]"
      ctlog:
        insecureIgnoreTlog: true
  validations:
  - message: "Image is missing a valid signature from the production key."
    expression: >-
      images.containers.all(image, 
        verifyImageSignatures(image, [attestors.productionKey]) >= 1
      )
  - message: "Image is missing a valid signature from the namespace-specific key."
    expression: >-
      images.containers.all(image, 
        verifyImageSignatures(image, [attestors.namespaceKey]) >= 1
      )
